add_executable(metric_core_smoke metric_core_smoke.cpp)
target_link_libraries(metric_core_smoke PRIVATE ${METRIC_TARGET_NAME})

add_executable(metric_mgc_smoke metric_mgc_smoke.cpp)
target_link_libraries(metric_mgc_smoke PRIVATE ${METRIC_TARGET_NAME})

if (METRIC_BUILD_CORE_ENTROPY)
    add_executable(metric_entropy_smoke metric_entropy_smoke.cpp)
    target_link_libraries(metric_entropy_smoke PRIVATE ${METRIC_TARGET_NAME})
    add_executable(engine_statistics_operators_smoke engine_statistics_operators_smoke.cpp)
    target_link_libraries(engine_statistics_operators_smoke PRIVATE ${METRIC_TARGET_NAME})
    add_executable(engine_pcfa_mapping_smoke engine_pcfa_mapping_smoke.cpp)
    target_link_libraries(engine_pcfa_mapping_smoke PRIVATE ${METRIC_TARGET_NAME})
    add_executable(engine_reduce_intent_smoke engine_reduce_intent_smoke.cpp)
    target_link_libraries(engine_reduce_intent_smoke PRIVATE ${METRIC_TARGET_NAME})
endif ()

add_executable(metric_contracts_smoke metric_contracts_smoke.cpp)
target_link_libraries(metric_contracts_smoke PRIVATE ${METRIC_TARGET_NAME})

add_executable(space_consistency_smoke space_consistency_smoke.cpp)
target_link_libraries(space_consistency_smoke PRIVATE ${METRIC_TARGET_NAME})

add_executable(engine_core_smoke engine_core_smoke.cpp)
target_link_libraries(engine_core_smoke PRIVATE ${METRIC_TARGET_NAME})

add_executable(engine_representations_smoke engine_representations_smoke.cpp)
target_link_libraries(engine_representations_smoke PRIVATE ${METRIC_TARGET_NAME})

add_executable(engine_nearest_operators_smoke engine_nearest_operators_smoke.cpp)
target_link_libraries(engine_nearest_operators_smoke PRIVATE ${METRIC_TARGET_NAME})

add_executable(engine_clustering_operators_smoke engine_clustering_operators_smoke.cpp)
target_link_libraries(engine_clustering_operators_smoke PRIVATE ${METRIC_TARGET_NAME})

add_executable(engine_dbscan_operator_smoke engine_dbscan_operator_smoke.cpp)
target_link_libraries(engine_dbscan_operator_smoke PRIVATE ${METRIC_TARGET_NAME})

add_executable(engine_intent_strategy_smoke engine_intent_strategy_smoke.cpp)
target_link_libraries(engine_intent_strategy_smoke PRIVATE ${METRIC_TARGET_NAME})

add_executable(engine_mapping_model_smoke engine_mapping_model_smoke.cpp)
target_link_libraries(engine_mapping_model_smoke PRIVATE ${METRIC_TARGET_NAME})

add_executable(engine_map_intent_smoke engine_map_intent_smoke.cpp)
target_link_libraries(engine_map_intent_smoke PRIVATE ${METRIC_TARGET_NAME})

add_executable(engine_denoise_intent_smoke engine_denoise_intent_smoke.cpp)
target_link_libraries(engine_denoise_intent_smoke PRIVATE ${METRIC_TARGET_NAME})

add_executable(engine_compare_intent_smoke engine_compare_intent_smoke.cpp)
target_link_libraries(engine_compare_intent_smoke PRIVATE ${METRIC_TARGET_NAME})

add_executable(engine_describe_intent_smoke engine_describe_intent_smoke.cpp)
target_link_libraries(engine_describe_intent_smoke PRIVATE ${METRIC_TARGET_NAME})

add_executable(engine_representatives_intent_smoke engine_representatives_intent_smoke.cpp)
target_link_libraries(engine_representatives_intent_smoke PRIVATE ${METRIC_TARGET_NAME})

add_executable(engine_outliers_intent_smoke engine_outliers_intent_smoke.cpp)
target_link_libraries(engine_outliers_intent_smoke PRIVATE ${METRIC_TARGET_NAME})

add_executable(engine_runtime_policy_smoke engine_runtime_policy_smoke.cpp)
target_link_libraries(engine_runtime_policy_smoke PRIVATE ${METRIC_TARGET_NAME})

add_test(NAME metric_core_smoke COMMAND metric_core_smoke)
add_test(NAME metric_mgc_smoke COMMAND metric_mgc_smoke)
if (METRIC_BUILD_CORE_ENTROPY)
    add_test(NAME metric_entropy_smoke COMMAND metric_entropy_smoke)
    add_test(NAME engine_statistics_operators_smoke COMMAND engine_statistics_operators_smoke)
    add_test(NAME engine_pcfa_mapping_smoke COMMAND engine_pcfa_mapping_smoke)
    add_test(NAME engine_reduce_intent_smoke COMMAND engine_reduce_intent_smoke)
endif ()
add_test(NAME metric_contracts_smoke COMMAND metric_contracts_smoke)
add_test(NAME space_consistency_smoke COMMAND space_consistency_smoke)
add_test(NAME engine_core_smoke COMMAND engine_core_smoke)
add_test(NAME engine_representations_smoke COMMAND engine_representations_smoke)
add_test(NAME engine_nearest_operators_smoke COMMAND engine_nearest_operators_smoke)
add_test(NAME engine_clustering_operators_smoke COMMAND engine_clustering_operators_smoke)
add_test(NAME engine_dbscan_operator_smoke COMMAND engine_dbscan_operator_smoke)
add_test(NAME engine_intent_strategy_smoke COMMAND engine_intent_strategy_smoke)
add_test(NAME engine_mapping_model_smoke COMMAND engine_mapping_model_smoke)
add_test(NAME engine_map_intent_smoke COMMAND engine_map_intent_smoke)
add_test(NAME engine_denoise_intent_smoke COMMAND engine_denoise_intent_smoke)
add_test(NAME engine_compare_intent_smoke COMMAND engine_compare_intent_smoke)
add_test(NAME engine_describe_intent_smoke COMMAND engine_describe_intent_smoke)
add_test(NAME engine_representatives_intent_smoke COMMAND engine_representatives_intent_smoke)
add_test(NAME engine_outliers_intent_smoke COMMAND engine_outliers_intent_smoke)
add_test(NAME engine_runtime_policy_smoke COMMAND engine_runtime_policy_smoke)
